definitions/peer/service.yaml
#
# Copyright contributors to the Hyperledger Fabric Operator project
#
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
# 	  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: v1
kind: Service
metadata:
  name: "peer-service"
spec:
  selector:
    release: "operator"
  type: ClusterIP
  ports:
    - name: "peer-api"
      port: 7051
      targetPort: 7051
    - name: "operations"
      port: 9443
      targetPort: 9443
    - name: "grpcweb"
      port: 7443
      targetPort: 7443
