definitions/peer/route.yaml
#
# Copyright contributors to the Hyperledger Fabric Operator project
#
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
# 	  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ibppeer-route
spec:
  host: ibppeer.ipaddress.nip.io
  port:
    targetPort: http
  tls:
    termination: passthrough
  to:
    kind: Service
    name: ibppeer-service
    weight: 100
  wildcardPolicy: None
