definitions/peer/saas-ingressv1beta1.yaml
#
# Copyright contributors to the Hyperledger Fabric Operator project
#
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
# 	  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-peer
  annotations:
    ingress.bluemix.net/ssl-services: ssl-service=<servicename>
    ingress.bluemix.net/redirect-to-https: "True"
    ingress.bluemix.net/client-max-body-size: size=25m
    ingress.bluemix.net/large-client-header-buffers: number=10 size=25K
    ingress.bluemix.net/proxy-buffering: enabled=false serviceName=<servicename>
    ingress.bluemix.net/proxy-read-timeout: "serviceName=<servicename> timeout=300s"
    ingress.bluemix.net/proxy-buffers: "serviceName=<servicename> number=4 size=25K"
    ingress.bluemix.net/proxy-buffer-size: "serviceName=<servicename> size=25K"
spec:
  rules:
    - host: fake.host
      http:
        paths:
          - backend:
              serviceName: fake-service
              servicePort: some-port
            path: /
  tls:
    - hosts:
        - fake.host
      secretName: fakesecret
